--- a/src/index.css
+++ b/src/index.css
@@ -252,17 +252,15 @@
 }
 
 @layer components {
-  .hero-bg {
-    background-image:
-      /* linear-gradient(135deg, hsl(var(--hero-bg)) 0%, hsl(var(--primary)) 55%, hsl(var(--primary-light)) 100%), */
-      url('/hero.png');
+  /* .hero-bg {
+
     background-size: cover, cover;
     background-position: center, center;
     background-repeat: no-repeat, no-repeat;
     position: relative;
     overflow: hidden;
     background-blend-mode: overlay;
-  }
+  } */
 
   .hero-bg::before {
     content: '';
